# libkril

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: Krilya_Crypt.c  Krilya_Crypt.h  Krilya_Key.c  Krilya_Key.h  Krilya_Type.h  krilya_decode.c  krilya_encode.c  krilya_make_key.c
